fix alignment

--- a/style.css
+++ b/style.css
@@ -553,11 +553,6 @@ ol{
   margin-bottom: 2rem;
 }
 
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -578,6 +573,10 @@ ol{
   margin-bottom: 1rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -586,28 +585,12 @@ ol{
   display: grid;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
 .w-screen {
   width: 100vw;
 }
 
 .w-36 {
   width: 9rem;
-}
-
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[20\%\] {
-  width: 20%;
 }
 
 .w-\[30\%\] {
@@ -648,12 +631,6 @@ ol{
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
 .justify-self-center {
   justify-self: center;
 }
@@ -689,8 +666,8 @@ ol{
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(255 255 255 / 0));
 }
 
-.to-black {
-  --tw-gradient-to: #000;
+.via-transparent {
+  --tw-gradient-stops: var(--tw-gradient-from), transparent, var(--tw-gradient-to, rgb(0 0 0 / 0));
 }
 
 .to-transparent {
@@ -743,18 +720,29 @@ ol{
   line-height: 1.75rem;
 }
 
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
 }
 
-.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
+.text-\[0\.7rem\] {
+  font-size: 0.7rem;
+}
+
+.text-\[rem\] {
+  font-size: rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
@@ -792,6 +780,10 @@ ol{
 
   .lg\:block {
     display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:w-\[1024px\] {
